<resources>
    <string name="app_name">Book Store</string>

    <!--    splash Activity-->
    <string name="welcomeTxt">Welcome House of Books</string>
    <string name="appName">ONLINE BOOK STORE</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    main Activity-->
    <string name="nav_Title">BOOK STORE</string>
    <string name="bookStore">Welcome To Book World</string>
    <string name="open">open</string>
    <string name="close">close</string>

    <!--    login fragment-->
    <string name="password">Password</string>
    <string name="username">Registered Email</string>
    <string name="sign_in">Sign In Here</string>


    <!--    register fragment-->
    <string name="Register">New user Registration</string>
    <string name="Email">Enter Email</string>
    <string name="setPassword">Create Password</string>
    <string name="FName">Enter your name</string>
    <string name="mobileNo">Enter mobile no</string>
    <string name="createUsername">Create user name</string>
    <string name="confirmPassword">confirm Password</string>
    <string name="tvLogin">Already have an account click here for login !</string>

    <!-- Dialog Fragment -->
    <string name="save_profileImg">click!! to save selected profile photo</string>

    <!-- Fragment Home-->
    <string name="home_title">Book Store</string>
    <string name="cart_title">My Cart</string>
    <string name="search">Search</string>
    <string name="cart">Cart</string>
    <string name="sortByA_Z">Sotr By Titel A-Z</string>
    <string name="sortByZ_A">Sotr By Titel Z-A</string>
    <string name="sort_byPrice_max_to_min">Sort By Price Min-Max</string>
    <string name="sort_byPrice_min_to_max">Sort By Price Max-Min</string>

    <!-- Customer details Fragment -->
    <string name="customerdetail_title">Shipping Details</string>

    <!-- Order Summery Fragment -->
    <string name="title_OrdersSummery">Order Summery</string>

    <!-- Order Confirmed Fragment -->
    <string name="title_Ordersplaced">Order confirmed</string>
    <string name="orderDetails_l1">Hurray!!your order is confirmed</string>
    <string name="orderDetails_l2">the order id is #123456 save the order id for</string>
    <string name="orderDetails_l3">further communication...</string>
    <string name="email">admin@bookstore.com</string>
    <string name="contact">+91 888888888888</string>
    <string name="address">42, 14 Main, 15th Cross, Sector 4, opp to BDA complex, Bangalore 560034</string>

    <!-- Id for get user shipping details -->
    <string name="shippingDetailsId">PermanentShippingAddress</string>


</resources>